src/user_agent.css
/* User Agent Stylesheet - Default browser styles */

/* Document structure */
html {
    display: block;
    font-family: "Times New Roman", Times, serif;
}
body {
    display: block;
    margin: 8px;
}

/* Links */
a:link {
    color: LinkText;
    text-decoration: underline;
    cursor: pointer;
}

a:visited {
    color: VisitedText;
}

a:active {
    color: ActiveText;
}

a:hover {
    color: ActiveText;
}

a:focus {
    outline: 1px dotted CanvasText;
    outline-offset: 2px;
}

/* HTML5 semantic elements */
main, article, section, header, footer, nav, aside, figure, figcaption {
    display: block;
}

/* Shadow DOM slotting */
slot {
    display: contents;
}

/* Headings */
h1 {
    display: block;
    font-size: 2em;
    font-weight: bold;
    margin-top: 0.67em;
    margin-bottom: 0.67em;
}

h2 {
    display: block;
    font-size: 1.5em;
    font-weight: bold;
    margin-top: 0.83em;
    margin-bottom: 0.83em;
}

h3 {
    display: block;
    font-size: 1.17em;
    font-weight: bold;
    margin-top: 1em;
    margin-bottom: 1em;
}

h4 {
    display: block;
    font-size: 1em;
    font-weight: bold;
    margin-top: 1.33em;
    margin-bottom: 1.33em;
}

h5 {
    display: block;
    font-size: 0.83em;
    font-weight: bold;
    margin-top: 1.67em;
    margin-bottom: 1.67em;
}

h6 {
    display: block;
    font-size: 0.67em;
    font-weight: bold;
    margin-top: 2.33em;
    margin-bottom: 2.33em;
}

/* Text blocks */
p {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
}

/* Lists */
ul, ol {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    padding-left: 40px;
}

/* Nested lists are typically rendered without extra vertical margins in browser UA stylesheets. */
ul ul, ul ol, ol ul, ol ol {
    margin-top: 0;
    margin-bottom: 0;
}

ul {
    list-style-type: disc;
    counter-reset: list-item;
}

ol {
    list-style-type: decimal;
    counter-reset: list-item;
}

li {
    display: list-item;
    counter-increment: list-item;
}

menu, dir {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    padding-left: 40px;
    list-style-type: disc;
}

dd {
    display: block;
    margin-left: 40px;
}

dl {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
}

dt {
    display: block;
}

/* Obsolete center element */
center {
    display: block;
    text-align: center;
}
center > * {
    text-align: center;
}
center > table,
center > div,
center > blockquote,
center > pre,
center > ul,
center > ol,
center > form,
center > p,
center > section,
center > article,
center > main {
    margin-left: auto;
    margin-right: auto;
}

/* Block elements */
div, header, footer, section, article, nav, aside, main, form, address {
    display: block;
}

blockquote {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    margin-left: 40px;
    margin-right: 40px;
}

figure {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    margin-left: 40px;
    margin-right: 40px;
}

pre {
    display: block;
    font-family: monospace;
    white-space: pre;
    margin-top: 1em;
    margin-bottom: 1em;
}

/* Tables */
table {
    display: table;
    border-collapse: separate;
    border-spacing: 2px;
}

caption {
    display: table-caption;
    caption-side: top;
    text-align: center;
}
colgroup {
    display: table-column-group;
}

col {
    display: table-column;
}

thead {
    display: table-header-group;
    vertical-align: middle;
}

tbody {
    display: table-row-group;
    vertical-align: middle;
}

tfoot {
    display: table-footer-group;
    vertical-align: middle;
}

tr {
    display: table-row;
    vertical-align: inherit;
}

td, th {
    display: table-cell;
    padding: 1px;
    vertical-align: inherit;
    text-align: start;
}

th {
    font-weight: bold;
    text-align: center;
}

/* Inline elements */
span, a, strong, em, b, i, u, small, mark, code, big, sub, sup {
    display: inline;
}

strong, b {
    font-weight: bolder;
}

bdi {
    unicode-bidi: isolate;
}

bdo {
    unicode-bidi: bidi-override;
}

em, i, address, cite, dfn, var {
    font-style: italic;
}

u {
    text-decoration: underline;
}

small {
    font-size: smaller;
}

big {
    font-size: larger;
}

sub {
    font-size: smaller;
    vertical-align: sub;
}

sup {
    font-size: smaller;
    vertical-align: super;
}

/* Ruby layout */
ruby {
    display: ruby;
    ruby-position: over;
    ruby-align: center;
}
rb {
    display: ruby-base;
}
rt {
    display: ruby-text;
    font-size: 0.5em;
    line-height: 1;
}
rtc {
    display: ruby-text-container;
}
rp {
    display: none;
}

mark {
    background-color: yellow;
    color: black;
}

ins {
    text-decoration: underline;
}

del, s, strike {
    text-decoration: line-through;
}

q {
    quotes: "“" "”" "‘" "’";
}

abbr[title], acronym[title] {
    border-bottom-width: 1px;
    border-bottom-style: dotted;
    border-bottom-color: currentColor;
    cursor: help;
}

a[href] {
    text-decoration: underline;
    cursor: pointer;
}

nobr {
    white-space: nowrap;
}

code, kbd, samp, tt {
    font-family: monospace;
}

/* Replaced elements */
img,
video,
canvas,
iframe,
object,
embed {
    overflow: clip;
}

iframe {
    border: 2px inset rgb(204, 204, 204);
}

iframe[frameborder="0"],
iframe[frameborder="no"] {
    border: 0;
}

/* HTML media elements */
audio:not([controls]) {
    display: none;
}

/* SVG defaults */
svg {
    overflow: hidden;
}

/* Form elements */
input, textarea, select, button {
    display: inline-block;
    box-sizing: content-box;
    margin: 0;
    padding: 4px 6px;
    border: 1px solid #767676;
    background-color: white;
    color: black;
    /* Match Chrome's default form-control typography more closely than inheriting the page font. */
    font-family: sans-serif;
    font-size: 13.333333px;
    line-height: normal;
    border-radius: 3px;
}

progress, meter {
    display: inline-block;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 1px solid #767676;
    background-color: rgb(230, 230, 230);
    border-radius: 4px;
    font-family: inherit;
    font-size: inherit;
    line-height: 1.2;
}

input::placeholder,
textarea::placeholder {
    opacity: 0.6;
}

input[type="text"], input[type="password"], input[type="email"],
input[type="search"], input[type="tel"], input[type="url"],
input[type="number"],
input:not([type]) {
    padding: 4px 12.5px;
    cursor: text;
}

/* Chromium-style search fields use border-box sizing so `width: 100%` includes padding/border. */
input[type="search"] {
    box-sizing: border-box;
}

input[type="submit"], input[type="button"], input[type="reset"], button {
    padding: 2px 7px;
    background-color: rgb(239, 239, 239);
    border: 1px solid #767676;
    border-radius: 3px;
    text-align: center;
    /* In grid/layout contexts, buttons should default to their intrinsic (content) width rather
       than stretching to fill the grid area. */
    justify-self: start;
    cursor: pointer;
}

input[type="file"]::file-selector-button,
input[type="file"]::-webkit-file-upload-button {
    display: inline-block;
    padding: 2px 7px;
    background-color: rgb(239, 239, 239);
    border: 1px solid #767676;
    border-radius: 3px;
    cursor: pointer;
    margin-right: 6px;
}

textarea {
    white-space: pre-wrap;
    cursor: text;
}

select:not([multiple]):not([size]),
select:not([multiple])[size=""],
select:not([multiple])[size="0"],
select:not([multiple])[size="1"] {
    padding-right: 20px;
    overflow-x: clip;
    overflow-y: clip;
    cursor: default;
}

select[multiple],
select[size]:not([size=""]):not([size="0"]):not([size="1"]) {
    padding-right: 6px;
    overflow-y: auto;
    overflow-x: hidden;
    cursor: default;
}

input[type="reset"] {
    cursor: pointer;
}

input[type="checkbox"], input[type="radio"] {
    width: 16px;
    height: 16px;
    padding: 0;
    border-radius: 3px;
    vertical-align: middle;
}

input[type="radio"] {
    border-radius: 50%;
}

input[type="range"] {
    padding: 0;
    border: none;
    background-color: transparent;
    min-height: 16px;
}

input[type="image"] {
    display: inline-block;
    padding: 0;
    border: none;
    background: transparent;
    cursor: pointer;
}

input[type="image"]:disabled {
    background: transparent;
    cursor: default;
}

input[type="range"]::-webkit-slider-runnable-track,
input[type="range"]::-moz-range-track {
    height: 4px;
    background-color: rgb(190,190,190);
    border-radius: 2px;
    border: none;
}

input[type="range"]::-webkit-slider-thumb,
input[type="range"]::-moz-range-thumb {
    width: 16px;
    height: 16px;
    background-color: #fff;
    border: 1px solid rgb(130,130,130);
    border-radius: 50%;
    box-shadow: none;
}

input[type="hidden"] {
    display: none;
}

input:focus,
textarea:focus,
select:focus,
button:focus {
    outline: 1px dotted rgb(0, 0, 0);
    outline-offset: 2px;
}

input:disabled,
textarea:disabled,
select:disabled,
button:disabled {
    color: gray;
    background-color: rgb(240, 240, 240);
    border-color: rgb(192, 192, 192);
    cursor: default;
}

option:disabled,
optgroup:disabled {
    color: gray;
    cursor: default;
}

option {
    display: block;
    white-space: pre;
}

optgroup {
    display: block;
    white-space: pre;
    font-weight: bold;
}

fieldset {
    display: block;
    margin: 0.35em 2px 0.625em;
    padding: 0.35em 0.75em 0.625em;
    border: 2px groove #c0c0c0;
}

legend {
    display: block;
    padding-left: 2px;
    padding-right: 2px;
}

details {
    display: block;
}

summary {
    display: list-item;
    cursor: pointer;
    list-style: disclosure-closed outside;
}

details[open] > summary:first-of-type {
    list-style-type: disclosure-open;
}

details:not([open]) > :not(summary:first-of-type) {
    display: none;
}

/* Dialogs and popovers */
dialog {
    display: block;
    position: fixed;
    inset: 0;
    margin: auto;
    padding: 1em;
    border: 1px solid rgb(192, 192, 192);
    background: white;
    color: black;
}

dialog:not([open]) {
    display: none;
}

dialog[data-fastr-modal="true"]::backdrop {
    background: rgba(0, 0, 0, 0.4);
}

*:where([popover]) {
    position: fixed;
    inset: auto;
    box-sizing: border-box;
    padding: 0.5em 1em;
    border: 1px solid rgb(192, 192, 192);
    background: white;
    color: black;
}

*:where([popover]):not([open]) {
    display: none;
}

/* Hidden elements - these should not be rendered */
head, style, script, meta, link, title, template,
base, basefont, datalist, noembed, noframes, param, area, map, source, track, noscript {
  display: none;
}

/* `<noscript>` is only rendered when scripting is disabled (HTML LS). */
noscript {
  display: none;
}

@media (scripting: none) {
  noscript {
    display: inline;
  }
}

[hidden] {
  display: none;
}

/* Horizontal rule */
hr {
    display: block;
    box-sizing: content-box;
    height: 1px;
    margin: 0.5em auto;
    color: gray;
    border: 1px inset currentColor;
}

/* ==========================================================================
   Paged media footnotes (CSS GCPM)
   ========================================================================== */

::footnote-call {
    content: counter(footnote);
    vertical-align: super;
    font-size: 0.75em;
}

::footnote-marker {
    content: counter(footnote);
}

